[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Themes/DarkThemeFlat.tres" type="Theme" id=1]
[ext_resource path="res://UserSettings/UserSettings.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/BlueAssets/Blue_material.tres" type="Material" id=3]
[ext_resource path="res://Assets/Images/icons/White_x128.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/icons/Gray_x128.png" type="Texture" id=5]
[ext_resource path="res://Assets/CustomNodes/Tween.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/CustomNodes/HShadowBottom.tscn" type="PackedScene" id=7]

[node name="UserSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -500.0
margin_right = 500.0
margin_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToggleAdmin" type="Button" parent="Buttons"]
margin_right = 1000.0
margin_bottom = 126.0
disabled = true
text = "Toggle Admin"

[node name="EditProfile" type="Button" parent="Buttons"]
margin_top = 144.0
margin_right = 1000.0
margin_bottom = 270.0
text = "Edit Profile"

[node name="LogOut" type="Button" parent="Buttons"]
margin_top = 288.0
margin_right = 1000.0
margin_bottom = 414.0
text = "Log Out"

[node name="TextureButton" type="TextureButton" parent="Buttons"]
margin_top = 432.0
margin_right = 1000.0
margin_bottom = 432.0

[node name="Exit" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = 160.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )

[node name="Tween" parent="." instance=ExtResource( 6 )]

[node name="HSeparatorBottom" parent="." instance=ExtResource( 7 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

